style.css
/* General Styles */

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html{
    font: normal 16px sans-serif;
    color: #555555;
}

img {
    width: 200px;
}

ul,nav{
    list-style: none;
}

a{
    text-decoration: none;
    opacity: 0.75;
    color: black;
}

a:hover{
    opacity: 1;
}

.grid{
    width: 100%;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

hr{
    width: 250px;
    height: 3px;
    background-color: #3f51bf;
    border: 0;
    margin-bottom: 50px;
}

section:not(.profile):nth-child(even){
    background-color: #f5f5ff;
}

section{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 100px;
}

section h3 .title{
    text-transform: capitalize;
    font: bold 20px "Open-sans", sans-serif;
    margin-bottom: 30px;
    text-align: center;
}

@media (max-width: 800px){
    section{
        padding: 50px 20px;
    }
}

/* header section */

.header{
    position: relative;
    text-align: center;
    justify-content: center;
    min-height: 100vh;
    color: black;
}

.header h1{
    font: bold 60px "Open-sans", sans-serif;
    margin-bottom: 15px;
}

.header h3{
    font: normal 28px "Open-sans", sans-serif;
    margin-bottom: 40px;
}

.header-content{
    opacity: 0;
    margin-top: 100px;
    animation: 1s slidefade 1s forwards;
}

@keyframes slidefade{
    100%{
        opacity: 1;
        margin: 0;
    }
}

@media (max-width: 800px){
    .header{
        min-height: 600vh;
    }
    .header h1{
        font-size: 48px;
    }
    .header h3{
        font-size: 24px;
    }

}

/* profile section */

.profile .grid li{
    height: 350px;
    padding: 20px;
    background-clip: content-box;
    background-size: cover;
    background-position: center;
}

/* footer section */

footer{
    display: flex;
    align-items: center;
    justify-content: space-around;
    background-color: #607d8b;
    color: #fff;
    padding: 20px 0;
}

footer ul{
    display: flex;
}

footer ul li{
    margin-left: 16px;
}

footer p{
    text-transform: uppercase;
    font-size: 14px;
    opacity: 0.6;
    align-self: center;
}

@media (max-width: 1100px){
    footer{
        flex-direction: column;
    }
    footer p{
        text-align: center;
        margin-bottom: 20px;
    }
    footer ul li{
        margin: 0 8px;
    }
}

